# rand_pne

.github/workflows/: all.yml
src/: CMakeLists.txt  main.cpp  rand.cpp  rand.hpp
